--- a/web/index.html
+++ b/web/index.html
@@ -19,18 +19,19 @@
           <button onclick="Connector.addNew()">Add Connector</button>
           <button onclick="Pin.addNew()">Add Pin</button>
         </div>
+        <div class="prefabs">
+          <div draggable="true" id="prefabConnector" class="connector element" onmousedown="tree.clickElement(window.event||event,this)"onmouseup="tree.clickElement(window.event||event,this)"ondragstart="tree.dragStart(window.event||event,this)">
+            <img class="arrow" onclick="tree.identifyByChild(this).toggleExpansionState()" src="icons/arrow.svg">
+            <img class="connectorIcon" src="icons/connector.svg">
+            <span class="name" id="connectorName">CON 214</span>
+          </div>
+
+          <div draggable="true" id="prefabPin" class="pin element" onmousedown="tree.clickElement(window.event||event,this)"onmouseup="tree.clickElement(window.event||event,this)"ondragstart="tree.dragStart(window.event||event,this)">
+            <img class="pinIcon" src="icons/pin.svg">
+            <span class="name" id="pinName">PIN 203</span>
+          </div>
+        </div>
         <div class="leftDragList deselectAllOnClick" id="treeContainer">
-      			<div draggable="true" id="prefabConnector" class="connector element" onmousedown="tree.clickElement(window.event||event,this)"onmouseup="tree.clickElement(window.event||event,this)"ondragstart="tree.dragStart(window.event||event,this)">
-      				<img class="arrow" onclick="tree.identifyByChild(this).toggleExpansionState()" src="icons/arrow.svg">
-      				<img class="connectorIcon" src="icons/connector.svg">
-      				<span class="name" id="connectorName">CON 214</span>
-      			</div>
-
-      			<div draggable="true" id="prefabPin" class="pin element" onmousedown="tree.clickElement(window.event||event,this)"onmouseup="tree.clickElement(window.event||event,this)"ondragstart="tree.dragStart(window.event||event,this)">
-      				<img class="pinIcon" src="icons/pin.svg">
-      				<span class="name" id="pinName">PIN 203</span>
-      			</div>
-
             <div id="dragPlaceholder">
             </div>
         </div>
